typescript/checker/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName6.ts.stderr
error: TS1164
 --> $DIR/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName6.ts:3:3
  |
3 |   [e] = 1
  |   ^^

